fix based on https://github.com/concourse/resource-types/pull/10/files#r359420165
Signed-off-by: cappyzawa <cappyzawa@yahoo.ne.jp>

--- a/cappyzawa-romver-resource.yml
+++ b/cappyzawa-romver-resource.yml
@@ -1,4 +1,4 @@
-name: romver-resource
+name: romver
 repo: https://github.com/cappyzawa/romver-resource
 container_image: cappyzawa/romver-resource
 description: |
