remove -resource from elgohr resources
Signed-off-by: Bishoy Youssef <byoussef@pivotal.io>

--- a/elgohr-concourse-blackduck.yml
+++ b/elgohr-concourse-blackduck.yml
@@ -1,4 +1,4 @@
-name: blackduck-resource
+name: blackduck
 repo: https://github.com/elgohr/concourse-blackduck
 container_image: lgohr/blackduck-resource
 description: |
