remove -resource from haiku resource
Signed-off-by: Bishoy Youssef <byoussef@pivotal.io>

--- a/haiku-irccat-resource.yml
+++ b/haiku-irccat-resource.yml
@@ -1,4 +1,4 @@
-name: irccat-resource
+name: irccat
 url: https://github.com/haiku/irccat-resource
 container_image: haiku/irccat-resource
 description: |
