remove -resource from phraseapp resource
Signed-off-by: Bishoy Youssef <byoussef@pivotal.io>

--- a/tenjaa-phraseapp-resource.yml
+++ b/tenjaa-phraseapp-resource.yml
@@ -1,4 +1,4 @@
-name: phraseapp-resource
+name: phraseapp
 repo: https://github.com/tenjaa/concourse-phraseapp-resource
 container_image: tenjaa/concourse-phraseapp-resource
 description: |
