--- a/brightzheng100-semver-config-resource.yml
+++ b/brightzheng100-semver-config-resource.yml
@@ -1,4 +1,4 @@
-name: semver-config-resource
+name: semver-config
 repo: https://github.com/brightzheng100/semver-config-concourse-resource
 container_image: itstarting/semver-config-concourse-resource
 description: |
