--- a/jgriff-hipchat-notification-resource.yml
+++ b/jgriff-hipchat-notification-resource.yml
@@ -1,4 +1,4 @@
-name: hipchat-notification-resource
+name: hipchat-notification
 repo: https://github.com/jgriff/hipchat-notification-resource
 container_image: jgriff/hipchat-notification-resource
 description: |
