--- a/rubenv-sentry-releases-resource.yml
+++ b/rubenv-sentry-releases-resource.yml
@@ -1,4 +1,4 @@
-name: sentry-releases-resource
+name: sentry-releases
 repo: https://github.com/rubenv/concourse-sentry-releases-resource
 container_image: rubenv/concourse-sentry-releases-resource
 description: |
