remove -resource from rss resource
Signed-off-by: Bishoy Youssef <byoussef@pivotal.io>

--- a/suhlig-rss-resource.yml
+++ b/suhlig-rss-resource.yml
@@ -1,4 +1,4 @@
-name: rss-resource
+name: rss
 repo: https://github.com/suhlig/concourse-rss-resource
 container_image: suhlig/concourse-rss-resource
 description: |
