--- a/haiku-irccat-resource.yml
+++ b/haiku-irccat-resource.yml
@@ -1,5 +1,5 @@
 name: irccat
-url: https://github.com/haiku/irccat-resource
+repo: https://github.com/haiku/irccat-resource
 container_image: haiku/irccat-resource
 description: |
   a resource to send notifications to irc via an irccat service
