--- a/concourse-datadog-event-resource.yml
+++ b/concourse-datadog-event-resource.yml
@@ -1,4 +1,4 @@
-name: datadog-event-resource
+name: datadog-event
 repo: https://github.com/concourse/datadog-event-resource
 container_image: concourse/datadog-event-resource
 description: |
