--- a/concourse-docker-image-resource.yml
+++ b/concourse-docker-image-resource.yml
@@ -1,4 +1,4 @@
-name: docker-image-resource
+name: docker-image
 repo: https://github.com/concourse/docker-image-resource
 container_image: concourse/docker-image-resource
 description: |
