--- a/concourse-semver-resource.yml
+++ b/concourse-semver-resource.yml
@@ -1,4 +1,4 @@
-name: semver-resource
+name: semver
 repo: https://github.com/concourse/semver-resource
 container_image: concourse/semver-resource
 description: |
