--- a/concourse-github-release-resource.yml
+++ b/concourse-github-release-resource.yml
@@ -1,4 +1,4 @@
-name: github-release-resource
+name: github-release
 repo: https://github.com/concourse/github-release-resource
 container_image: concourse/github-release-resource
 description: |
