--- a/concourse-tracker-resource.yml
+++ b/concourse-tracker-resource.yml
@@ -1,4 +1,4 @@
-name: tracker-resource
+name: tracker
 repo: https://github.com/concourse/tracker-resource
 container_image: concourse/tracker-resource
 description: |
