remove -resource from alphagov-paas-grafana-annotation-resource.yml
Signed-off-by: Bishoy Youssef <byoussef@pivotal.io>

--- a/alphagov-paas-grafana-annotation-resource.yml
+++ b/alphagov-paas-grafana-annotation-resource.yml
@@ -1,4 +1,4 @@
-name: grafana-annotation-resource
+name: grafana-annotation
 repo: https://github.com/alphagov/paas-grafana-annotation-resource
 container_image: gdsre/grafana-annotation-resource
 description: |
