--- a/srinivasa-vasu-k8s.yml
+++ b/srinivasa-vasu-k8s.yml
@@ -1,4 +1,4 @@
-name: git
+name: k8s
 repo: https://github.com/srinivasa-vasu/concourse-k8s.git
 container_image: srinivasavasu/concourse-k8s
 description: |
