--- a/emerald-squad-cf-flyway-resource.yml
+++ b/emerald-squad-cf-flyway-resource.yml
@@ -2,4 +2,4 @@ name: cf-flyway
 repo: https://github.com/emerald-squad/cf-flyway-resource
 container_image: emeraldsquad/cf-flyway-resource
 description: |
-A concourse-ci resource with cf-cli and flyway-cli installed. The resource out script allows Flyway migration automation.
+  a concourse-ci resource with cf-cli and flyway-cli installed. The resource out script allows Flyway migration automation.
