Fixed the name yaml attribute (bad copy-and-paste)
Signed-off-by: patrickcrocker <patrick.crocker@gmail.com>

--- a/nulldriver-cf-cli-resource.yml
+++ b/nulldriver-cf-cli-resource.yml
@@ -1,4 +1,4 @@
-name: git
+name: cf-cli
 repo: https://github.com/nulldriver/cf-cli-resource
 container_image: nulldriver/cf-cli-resource
 description: |
