--- a/srinivasa-vasu-k8s.yml
+++ b/srinivasa-vasu-k8s.yml
@@ -1,5 +1,5 @@
 name: k8s
-repo: https://github.com/srinivasa-vasu/concourse-k8s.git
+repo: https://github.com/srinivasa-vasu/concourse-k8s
 container_image: srinivasavasu/concourse-k8s
 description: |
   Custom K8s resource type to deploy manifests to K8s
