As suggested, just calling the resource "gate"
Signed-off-by: Johannes Rudolph <jrudolph@meshcloud.io>

--- a/meshcloud-gate-resource.yml
+++ b/meshcloud-gate-resource.yml
@@ -1,4 +1,4 @@
-name: gate-resource
+name: gate
 repo: https://github.com/meshcloud/gate-resource
 container_image: meshcloud/gate-resource
 description: |
