Modified the resource name
Signed-off-by: Karthikeyan Mohan <jmkarthik@gmail.com>

--- a/jmkarthik-kubectl_resource.yml
+++ b/jmkarthik-kubectl_resource.yml
@@ -1,4 +1,4 @@
-name: kubectl-resource
+name: kubectl
 repo: https://github.com/jmkarthik/concourse-kubectl-resource
 container_image: jmkarthik/concourse-kubectl-resource
 description: |
