--- a/dcsg-bugsnag-build-resource.yml
+++ b/dcsg-bugsnag-build-resource.yml
@@ -1,4 +1,4 @@
-name: datetime-version
+name: bugsnag-build-version
 repo: https://github.com/dcsg/bugsnag-build-resource
 container_image: dcsg/bugsnag-build-resource
 description: |
