change the name to bugsnag-build
Signed-off-by: Daniel Gomes <hi@dcsg.me>

--- a/dcsg-bugsnag-build-resource.yml
+++ b/dcsg-bugsnag-build-resource.yml
@@ -1,4 +1,4 @@
-name: bugsnag-build-version
+name: bugsnag-build
 repo: https://github.com/dcsg/bugsnag-build-resource
 container_image: dcsg/bugsnag-build-resource
 description: |
