update description for webhook-notification-resource
Signed-off-by: Mike Dalessio <mike.dalessio@gmail.com>

--- a/flavorjones-webhook-notification-resource.yml
+++ b/flavorjones-webhook-notification-resource.yml
@@ -2,4 +2,4 @@ name: webhook-notification
 repo: https://github.com/flavorjones/webhook-notification-resource
 container_image: flavorjones/webhook-notification-resource
 description: |
-  Sends notification messages to webhooks-drive services like Gitter. Easily extensible to other services.
+  Sends notification messages to services like Discord and Gitter via webhook. Easily extensible to other services.
