--- a/mamercad-awx-resource.yml
+++ b/mamercad-awx-resource.yml
@@ -1,4 +1,4 @@
-name: git
+name: awx
 repo: https://github.com/mamercad/concourse-awx-resource
 container_image: quay.io/mamercad/concourse-awx-resource
 description: |
