fix/teams-notification: set descriptive name
The teams-notification resource type by navicore currently has `git` as
its name. This commit changes it to `teams-notification`.

Signed-off-by: Dan Herrera <sonarius@shew.io>

--- a/navicore-teams-notification-resource.yml
+++ b/navicore-teams-notification-resource.yml
@@ -1,4 +1,4 @@
-name: git
+name: teams-notification
 repo: https://github.com/navicore/teams-notification-resource
 container_image: navicore/teams-notification-resource
 description: |
