--- a/makohoek-repo-resource.yml
+++ b/makohoek-repo-resource.yml
@@ -1,5 +1,5 @@
 name: repo
 repo: https://github.com/makohoek/repo-resource
-container_image: makohoek/repo-resource
+container_image: mkorpershoek/repo-resource
 description: |
   Track changes for projects using (Google's) repo.
